// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventActorActivate.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255

.LOCAL_ACTOR = -4

___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK

        VM_RESERVE              4
        VM_SET_CONST            .LOCAL_ACTOR, 0
        VM_ACTOR_ACTIVATE       .LOCAL_ACTOR

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventActorHide.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255

.LOCAL_ACTOR = -4

___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK

        VM_RESERVE              4
        VM_SET_CONST            .LOCAL_ACTOR, 0
        VM_ACTOR_SET_HIDDEN     .LOCAL_ACTOR, 1

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventActorMoveRelative.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255


___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK
        VM_RPN
            .R_INT16    0
            .R_INT16    256
            .R_INT16    0
            .R_STOP
        VM_ACTOR_MOVE_TO_INIT   .ARG2, ^/(.ACTOR_ATTR_CHECK_COLL_WALLS | .ACTOR_ATTR_H_FIRST | .ACTOR_ATTR_RELATIVE_SNAP_TILE)/
        VM_ACTOR_MOVE_TO_SET_DIR_X .ARG2
        VM_ACTOR_MOVE_TO_X      .ARG2, ^/(.ACTOR_ATTR_CHECK_COLL_WALLS | .ACTOR_ATTR_H_FIRST | .ACTOR_ATTR_RELATIVE_SNAP_TILE)/
        VM_POP                  3

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventActorMoveTo.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255

.LOCAL_ACTOR = -4

___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK

        VM_RESERVE              4
        VM_RPN
            .R_INT16    512
            .R_REF_SET  ^/(.LOCAL_ACTOR + 1)/
            .R_INT16    4352
            .R_REF_SET  ^/(.LOCAL_ACTOR + 2)/
            .R_STOP
        VM_SET_CONST            .LOCAL_ACTOR, 0
        VM_ACTOR_MOVE_TO_INIT   .LOCAL_ACTOR, ^/(.ACTOR_ATTR_CHECK_COLL_WALLS | .ACTOR_ATTR_H_FIRST)/
        VM_ACTOR_MOVE_TO_SET_DIR_X .LOCAL_ACTOR
        VM_ACTOR_MOVE_TO_X      .LOCAL_ACTOR, ^/(.ACTOR_ATTR_CHECK_COLL_WALLS | .ACTOR_ATTR_H_FIRST)/
        VM_ACTOR_MOVE_TO_SET_DIR_Y .LOCAL_ACTOR
        VM_ACTOR_MOVE_TO_Y      .LOCAL_ACTOR, ^/(.ACTOR_ATTR_CHECK_COLL_WALLS | .ACTOR_ATTR_H_FIRST)/

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventActorSetDirection.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255

.LOCAL_ACTOR = -4

___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK

        VM_RESERVE              4
        VM_SET_CONST            .LOCAL_ACTOR, 0
        VM_ACTOR_SET_DIR        .LOCAL_ACTOR, .DIR_DOWN

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventActorSetDirection.js 2`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255

.LOCAL_ACTOR = -4

___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK

        VM_RESERVE              4
        VM_SET_CONST            .LOCAL_ACTOR, 0
        VM_ACTOR_SET_DIR        .LOCAL_ACTOR, .DIR_UP

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventActorSetPosition.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255

.LOCAL_ACTOR = -4

___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK

        VM_RESERVE              4
        VM_RPN
            .R_INT16    1280
            .R_REF_SET  ^/(.LOCAL_ACTOR + 1)/
            .R_INT16    2560
            .R_REF_SET  ^/(.LOCAL_ACTOR + 2)/
            .R_STOP
        VM_SET_CONST            .LOCAL_ACTOR, 0
        VM_ACTOR_SET_POS        .LOCAL_ACTOR

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventActorShow.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255

.LOCAL_ACTOR = -4

___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK

        VM_RESERVE              4
        VM_SET_CONST            .LOCAL_ACTOR, 0
        VM_ACTOR_SET_HIDDEN     .LOCAL_ACTOR, 0

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventCallCustomEvent.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255


___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK
        VM_PUSH_REFERENCE       VAR_VARIABLE_0
        VM_CALL_FAR             ___bank_script_1, _script_1

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventComment.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255


___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK


"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventFadeIn.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.globl _fade_frames_per_step

.area _CODE_255


___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK
        VM_IDLE
        VM_SET_CONST_INT8       _fade_frames_per_step, 3
        VM_FADE_IN              1

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventFadeOut.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.globl _fade_frames_per_step

.area _CODE_255


___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK
        VM_SET_CONST_INT8       _fade_frames_per_step, 3
        VM_FADE_OUT             1

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventIf.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255


___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK
        VM_RPN
            .R_REF      VAR_VARIABLE_0
            .R_INT16    42
            .R_OPERATOR .EQ
            .R_STOP
        VM_IF_CONST             .NE, .ARG0, 0, 1$, 1
        VM_OVERLAY_CLEAR        0, 0, 20, 4, .UI_COLOR_WHITE, .UI_DRAW_FRAME
        VM_OVERLAY_MOVE_TO      0, 18, .OVERLAY_SPEED_INSTANT
        VM_OVERLAY_MOVE_TO      0, 14, .OVERLAY_IN_SPEED
        VM_OVERLAY_SET_SCROLL   1, 1, 18, 5, .UI_COLOR_WHITE
        VM_LOAD_TEXT            0
        .asciz "False Path"
        VM_DISPLAY_TEXT
        VM_OVERLAY_WAIT         .UI_MODAL, ^/(.UI_WAIT_WINDOW | .UI_WAIT_TEXT | .UI_WAIT_BTN_A)/
        VM_OVERLAY_MOVE_TO      0, 18, .OVERLAY_OUT_SPEED
        VM_OVERLAY_WAIT         .UI_MODAL, ^/(.UI_WAIT_WINDOW | .UI_WAIT_TEXT)/

        VM_JUMP                 2$
1$:
        VM_OVERLAY_CLEAR        0, 0, 20, 4, .UI_COLOR_WHITE, .UI_DRAW_FRAME
        VM_OVERLAY_MOVE_TO      0, 18, .OVERLAY_SPEED_INSTANT
        VM_OVERLAY_MOVE_TO      0, 14, .OVERLAY_IN_SPEED
        VM_OVERLAY_SET_SCROLL   1, 1, 18, 5, .UI_COLOR_WHITE
        VM_LOAD_TEXT            0
        .asciz "True Path"
        VM_DISPLAY_TEXT
        VM_OVERLAY_WAIT         .UI_MODAL, ^/(.UI_WAIT_WINDOW | .UI_WAIT_TEXT | .UI_WAIT_BTN_A)/
        VM_OVERLAY_MOVE_TO      0, 18, .OVERLAY_OUT_SPEED
        VM_OVERLAY_WAIT         .UI_MODAL, ^/(.UI_WAIT_WINDOW | .UI_WAIT_TEXT)/

2$:

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventIf.js 2`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255


___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK
        VM_RPN
            .R_REF      VAR_VARIABLE_0
            .R_INT16    42
            .R_OPERATOR .EQ
            .R_STOP
        VM_IF_CONST             .NE, .ARG0, 0, 1$, 1
        VM_JUMP                 2$
1$:
2$:

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventIf.js 3`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255


___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK
        VM_RPN
            .R_INT16    1
            .R_STOP
        VM_IF_CONST             .NE, .ARG0, 0, 1$, 1
        VM_OVERLAY_CLEAR        0, 0, 20, 4, .UI_COLOR_WHITE, .UI_DRAW_FRAME
        VM_OVERLAY_MOVE_TO      0, 18, .OVERLAY_SPEED_INSTANT
        VM_OVERLAY_MOVE_TO      0, 14, .OVERLAY_IN_SPEED
        VM_OVERLAY_SET_SCROLL   1, 1, 18, 5, .UI_COLOR_WHITE
        VM_LOAD_TEXT            0
        .asciz "False Path"
        VM_DISPLAY_TEXT
        VM_OVERLAY_WAIT         .UI_MODAL, ^/(.UI_WAIT_WINDOW | .UI_WAIT_TEXT | .UI_WAIT_BTN_A)/
        VM_OVERLAY_MOVE_TO      0, 18, .OVERLAY_OUT_SPEED
        VM_OVERLAY_WAIT         .UI_MODAL, ^/(.UI_WAIT_WINDOW | .UI_WAIT_TEXT)/

        VM_JUMP                 2$
1$:
        VM_OVERLAY_CLEAR        0, 0, 20, 4, .UI_COLOR_WHITE, .UI_DRAW_FRAME
        VM_OVERLAY_MOVE_TO      0, 18, .OVERLAY_SPEED_INSTANT
        VM_OVERLAY_MOVE_TO      0, 14, .OVERLAY_IN_SPEED
        VM_OVERLAY_SET_SCROLL   1, 1, 18, 5, .UI_COLOR_WHITE
        VM_LOAD_TEXT            0
        .asciz "True Path"
        VM_DISPLAY_TEXT
        VM_OVERLAY_WAIT         .UI_MODAL, ^/(.UI_WAIT_WINDOW | .UI_WAIT_TEXT | .UI_WAIT_BTN_A)/
        VM_OVERLAY_MOVE_TO      0, 18, .OVERLAY_OUT_SPEED
        VM_OVERLAY_WAIT         .UI_MODAL, ^/(.UI_WAIT_WINDOW | .UI_WAIT_TEXT)/

2$:

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventLinkClose.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255


___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK

        VM_SIO_SET_MODE         .SIO_MODE_NONE
"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventLinkStart.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255


___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK

        VM_SIO_SET_MODE         .SIO_MODE_SLAVE
"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventLoop.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255


___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK

2$:
        VM_OVERLAY_CLEAR        0, 0, 20, 4, .UI_COLOR_WHITE, .UI_DRAW_FRAME
        VM_OVERLAY_MOVE_TO      0, 18, .OVERLAY_SPEED_INSTANT
        VM_OVERLAY_MOVE_TO      0, 14, .OVERLAY_IN_SPEED
        VM_OVERLAY_SET_SCROLL   1, 1, 18, 5, .UI_COLOR_WHITE
        VM_LOAD_TEXT            0
        .asciz "In Loop"
        VM_DISPLAY_TEXT
        VM_OVERLAY_WAIT         .UI_MODAL, ^/(.UI_WAIT_WINDOW | .UI_WAIT_TEXT | .UI_WAIT_BTN_A)/
        VM_OVERLAY_MOVE_TO      0, 18, .OVERLAY_OUT_SPEED
        VM_OVERLAY_WAIT         .UI_MODAL, ^/(.UI_WAIT_WINDOW | .UI_WAIT_TEXT)/

        VM_JUMP                 2$
"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventMusicStop.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255


___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK
        VM_MUSIC_STOP

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventOverlayHide.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255


___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK
        VM_OVERLAY_HIDE

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventReplaceTileXYSequence.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255

.LOCAL_TMP0_TO_VAR = -1

___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK

        VM_RESERVE              1
        VM_SET_CONST            .LOCAL_TMP0_TO_VAR, 3
        VM_IF_CONST             .LT, VAR_VARIABLE_0, 0, 1$, 0
        VM_JUMP                 2$
1$:
        VM_SET_CONST            VAR_VARIABLE_0, 0

2$:
        VM_RPN
            .R_REF      VAR_VARIABLE_0
            .R_INT8     1
            .R_OPERATOR .ADD
            .R_REF_SET  VAR_VARIABLE_0
            .R_STOP
        VM_IF                   .GT, VAR_VARIABLE_0, .LOCAL_TMP0_TO_VAR, 3$, 0
        VM_JUMP                 4$
3$:
        VM_SET_CONST            VAR_VARIABLE_0, 0

4$:

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventScriptStop.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255


___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK
        VM_STOP
"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventSpritesHide.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255


___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK
        VM_HIDE_SPRITES
"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventSpritesShow.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255


___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK
        VM_SHOW_SPRITES
"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventTextDialogue.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255


___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK
        VM_OVERLAY_CLEAR        0, 0, 20, 4, .UI_COLOR_WHITE, .UI_DRAW_FRAME
        VM_OVERLAY_MOVE_TO      0, 18, .OVERLAY_SPEED_INSTANT
        VM_OVERLAY_MOVE_TO      0, 14, .OVERLAY_IN_SPEED
        VM_OVERLAY_SET_SCROLL   1, 1, 18, 5, .UI_COLOR_WHITE
        VM_LOAD_TEXT            0
        .asciz "Hello World"
        VM_DISPLAY_TEXT
        VM_OVERLAY_WAIT         .UI_MODAL, ^/(.UI_WAIT_WINDOW | .UI_WAIT_TEXT | .UI_WAIT_BTN_A)/
        VM_OVERLAY_MOVE_TO      0, 18, .OVERLAY_OUT_SPEED
        VM_OVERLAY_WAIT         .UI_MODAL, ^/(.UI_WAIT_WINDOW | .UI_WAIT_TEXT)/

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventTextDialogue.js 2`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255


___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK
        VM_OVERLAY_CLEAR        0, 0, 20, 4, .UI_COLOR_WHITE, .UI_DRAW_FRAME
        VM_OVERLAY_MOVE_TO      0, 18, .OVERLAY_SPEED_INSTANT
        VM_OVERLAY_MOVE_TO      0, 14, .OVERLAY_IN_SPEED
        VM_OVERLAY_SET_SCROLL   1, 1, 18, 5, .UI_COLOR_WHITE
        VM_LOAD_TEXT            0
        .asciz "Hello World"
        VM_DISPLAY_TEXT
        VM_OVERLAY_WAIT         .UI_MODAL, ^/(.UI_WAIT_WINDOW | .UI_WAIT_TEXT | .UI_WAIT_BTN_A)/
        VM_OVERLAY_CLEAR        0, 0, 20, 4, .UI_COLOR_WHITE, .UI_DRAW_FRAME
        VM_LOAD_TEXT            0
        .asciz "Goodbye World"
        VM_DISPLAY_TEXT
        VM_OVERLAY_WAIT         .UI_MODAL, ^/(.UI_WAIT_WINDOW | .UI_WAIT_TEXT | .UI_WAIT_BTN_A)/
        VM_OVERLAY_MOVE_TO      0, 18, .OVERLAY_OUT_SPEED
        VM_OVERLAY_WAIT         .UI_MODAL, ^/(.UI_WAIT_WINDOW | .UI_WAIT_TEXT)/

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventWait.js 1`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255

.LOCAL_TMP0_WAIT_ARGS = -1

___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK

        VM_RESERVE              1
        VM_IDLE

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventWait.js 2`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.area _CODE_255

.LOCAL_TMP0_WAIT_ARGS = -1

___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK

        VM_RESERVE              1
        VM_IDLE
        VM_IDLE
        VM_IDLE

"
`;

exports[`Compare output from trusted and untrusted plugin handlers Compare output for src/lib/events/eventWait.js 3`] = `
".module script

.include "vm.i"
.include "data/game_globals.i"

.globl b_wait_frames, _wait_frames

.area _CODE_255

.LOCAL_TMP0_WAIT_ARGS = -1

___bank_script = 255
.globl ___bank_script

_script::
        VM_LOCK

        VM_RESERVE              1
        VM_SET_CONST            .LOCAL_TMP0_WAIT_ARGS, 30
        VM_INVOKE               b_wait_frames, _wait_frames, 0, .LOCAL_TMP0_WAIT_ARGS

"
`;
